<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity_registro_usuarios">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="149dp"
        android:layout_marginTop="16dp"
        android:text="@string/ru_cabecera"
        android:textColor="@color/white"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="377dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv2_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="yes"
            android:text="@string/ru_apellido"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et2_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAccessibility="yes"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="51dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/tv1_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru_nombre"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et1_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAccessibility="yes"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="68dp"
            android:layout_height="28dp"
            android:text="Sexo:"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinner_ru"
            android:layout_width="192dp"
            android:layout_height="34dp" />
    </TableRow>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="Siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <EditText
        android:id="@+id/fecha_nacimiento"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Fecha Nacimiento:"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/fecha_nacimiento"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

</androidx.constraintlayout.widget.ConstraintLayout>